Hero Section Completed

--- a/index.html
+++ b/index.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Website | Sourav kr. jha</title>
-    <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="main-container">
-        <div class="navbar">
-            <img src="images/nav-logo.jpg" alt="" class="nav-logo">
-            <ul>
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">FAQ</a></li>
-            </ul>
-            <button>
-               Login 
-            </button>
-        </div>
+      <div class="navbar">
+        <img src="images/nav-logo.jpg" alt="" class="nav-logo" />
+        <ul>
+          <li><a href="" class="active">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Features</a></li>
+          <li><a href="">Pricing</a></li>
+          <li><a href="">FAQ</a></li>
+        </ul>
+        <button>Login</button>
+      </div>
 
-        <div class="bottom_sec"></div>
+      <div class="bottom_sec">
+        <div class="bottom-left">
+          <h1>Design with Sourav DEVELOPER</h1>
+          <p>
+            Sourav Kumar Jha, a front-end developer, presents an interactive 3D
+            website using HTML, CSS, and JavaScript. Explore responsive design,
+            smooth animations, and engaging 3D elements.
+          </p>
+          <div class="btn-sec">
+            <button>Like my Work</button>
+            <button class="like-btn">Share my Work</button>
+          </div>
+        </div>
+        <div class="bottom-right"></div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
