--- a/index.html
+++ b/index.html
@@ -8,33 +8,48 @@
   </head>
   <body>
     <div class="main-container">
+      
       <div class="navbar">
-        <img src="images/nav-logo.jpg" alt="" class="nav-logo" />
-        <ul>
-          <li><a href="" class="active">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Features</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">FAQ</a></li>
-        </ul>
-        <button>Login</button>
+         <img src="images/nav-logo.jpg" alt="" class="nav-logo"/>
+         <ul>
+             <li><a href="" class="active">Home</a></li>
+             <li><a href="">About</a></li>
+             <li><a href="">Features</a></li>
+             <li><a href="">Pricing</a></li>
+             <li><a href="">FAQ</a></li>
+         </ul>
+         <button>
+             Login
+         </button>
       </div>
-
-      <div class="bottom_sec">
-        <div class="bottom-left">
-          <h1>Design with Sourav DEVELOPER</h1>
-          <p>
-            Sourav Kumar Jha, a front-end developer, presents an interactive 3D
-            website using HTML, CSS, and JavaScript. Explore responsive design,
-            smooth animations, and engaging 3D elements.
-          </p>
-          <div class="btn-sec">
-            <button>Like my Work</button>
-            <button class="like-btn">Share my Work</button>
-          </div>
-        </div>
-        <div class="bottom-right"></div>
+ 
+      <div class="bottom-sec">
+         <div class="bottom-left">
+             <h1>design with Sourav Developer</h1>
+             <p>Sourav Kumar Jha, a front-end developer, presents an interactive 3D website using HTML, CSS, and JavaScript. Explore responsive design, smooth animations, and engaging 3D elements.!</p>
+             <div class="btn-sec">
+                 <button>
+                     Like my Work
+                 </button>
+                 <button class="like-btn">
+                     Share my Work
+                 </button>
+             </div>
+         </div>
+         <div class="bottom-right">
+             <div class="ball-circle">
+                 <div class="ball"></div>
+             </div>
+             <div class="main-circle"></div>
+             <div class="circle2">
+                 <img src="images/circlelogo.png" alt=""/>
+             </div>
+             <div class="shot-circle">
+                 <img src="images/shape.svg" alt=""/>
+             </div>
+         </div>
       </div>
+ 
     </div>
   </body>
 </html>
